--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -8,11 +8,11 @@
         android:layout_height="18dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
-        android:id="@+id/placeText"
+        android:id="@+id/place"
         android:drawableLeft="@drawable/ic_action_room"
         android:layout_marginLeft="23dp"
         android:layout_marginStart="23dp"
-        android:layout_above="@+id/doctorText"
+        android:layout_above="@+id/doctor"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="12dp" />
@@ -22,12 +22,12 @@
         android:layout_height="18dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
-        android:id="@+id/doctorText"
+        android:id="@+id/doctor"
         android:drawableLeft="@drawable/ic_maps_local_hospital"
         android:textStyle="bold"
-        android:layout_above="@+id/timeText"
-        android:layout_alignLeft="@+id/placeText"
-        android:layout_alignStart="@+id/placeText"
+        android:layout_above="@+id/time"
+        android:layout_alignLeft="@+id/place"
+        android:layout_alignStart="@+id/place"
         android:layout_marginTop="4dp" />
 
     <TextView
@@ -35,11 +35,11 @@
         android:layout_height="18dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
-        android:id="@+id/timeText"
+        android:id="@+id/time"
         android:drawableLeft="@drawable/ic_action_schedule"
         android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/doctorText"
-        android:layout_alignStart="@+id/doctorText"
+        android:layout_alignLeft="@+id/doctor"
+        android:layout_alignStart="@+id/doctor"
         android:layout_marginBottom="12dp"
         android:layout_marginTop="4dp" />
 
@@ -48,10 +48,10 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
-        android:id="@+id/captionText"
-        android:layout_above="@+id/placeText"
-        android:layout_alignLeft="@+id/placeText"
-        android:layout_alignStart="@+id/placeText"
+        android:id="@+id/name"
+        android:layout_above="@+id/place"
+        android:layout_alignLeft="@+id/place"
+        android:layout_alignStart="@+id/place"
         android:textStyle="bold"
         android:textColor="#439ae1" />
 
@@ -63,7 +63,7 @@
         android:id="@+id/dateText"
         android:layout_marginRight="22dp"
         android:layout_marginEnd="22dp"
-        android:layout_alignBottom="@+id/captionText"
+        android:layout_alignBottom="@+id/name"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 </RelativeLayout>
