--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -3,20 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
     <item
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_action_settings"
         android:orderInCategory="100"
+        android:title="lolka"
         app:showAsAction="always">
 
         <menu>
             <item
                 android:id="@+id/old"
-                android:title="Old queues" />
+                android:title="History"
+                android:icon="@drawable/ic_menu_history"/>
             <item
                 android:id="@+id/logout"
-                android:title="Log out" />
+                android:title="Log out"
+                android:icon="@drawable/ic_menu_log_out"/>
         </menu>
 
     </item>
