--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,16 +16,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context=".activity.LoginActivity"
-        android:layout_below="@+id/toolbar">
-
-
-        <ScrollView
-            android:id="@+id/login_form"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </ScrollView>
+        tools:context=".activity.LoginActivity">
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -43,7 +34,7 @@
 
                 <AutoCompleteTextView
                     android:drawableLeft="@drawable/ic_icon_login"
-                    android:id="@+id/login"
+                    android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_email"
@@ -68,7 +59,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
-                    android:imeActionId="@+id/login"
+                    android:imeActionId="@+id/name"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
@@ -120,17 +111,16 @@
             android:clickable="true" />
 
         <ImageView
-            android:layout_width="92dp"
+            android:layout_width="192dp"
             android:layout_height="wrap_content"
             android:id="@+id/imageView"
 
-            android:src="@drawable/abc_btn_rating_star_on_mtrl_alpha"
-            android:layout_alignParentTop="true"
+            android:src="@mipmap/Logo_for_login"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            />
+            android:layout_marginTop="70dp" />
 
     </RelativeLayout>
 
