--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -44,7 +44,7 @@
 
                 <AutoCompleteTextView
                     android:drawableLeft="@drawable/ic_icon_login"
-                    android:id="@+id/login"
+                    android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_email"
@@ -69,7 +69,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Email"
-                    android:imeActionId="@+id/login"
+                    android:imeActionId="@+id/name"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
@@ -90,7 +90,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
-                    android:imeActionId="@+id/login"
+                    android:imeActionId="@+id/name"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
@@ -111,7 +111,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Confirm password"
-                    android:imeActionId="@+id/login"
+                    android:imeActionId="@+id/name"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
@@ -166,11 +166,11 @@
     </RelativeLayout>
 
     <ImageView
-        android:layout_width="92dp"
+        android:layout_width="192dp"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
 
-        android:src="@drawable/abc_btn_rating_star_on_mtrl_alpha"
+        android:src="@mipmap/Logo_for_login"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:layout_alignParentTop="true"
