--- a/app/src/main/res/layout/fragment_order_details.xml
+++ b/app/src/main/res/layout/fragment_order_details.xml
@@ -165,12 +165,12 @@
         <TextView
             android:id="@+id/description"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
 
             android:layout_marginTop="8dp"
-            android:drawableLeft="@android:drawable/ic_menu_agenda"
+            android:drawableLeft="@drawable/ic_action_name"
             android:text="Large Text"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:layout_marginLeft="22dp" />
